update dpup release notes

--- a/woof-code/support/release_extras/vanilladpup.htm
+++ b/woof-code/support/release_extras/vanilladpup.htm
@@ -32,6 +32,11 @@
   <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2457" target="_blank">A large kernel package with many drivers, based on Debian's kernel configuration</a></li>
   <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2435" target="_blank">Special tuning to reduce waste of RAM</a></li>
   <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2514" target="_blank">Easy network interface management using ConnMan</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/frugalify" target="_blank">The new PUPMODE 6 boot mode, using frugalify</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/1948/commits/f6bb5a06e3c045c8796914855ecc65014b9d1002" target="_blank">Removable internationalization and documentation modules, included by default</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/frugalify/commit/a1c4489bfe84fadbd4319c50b0716900bcdd6182" target="_blank">Continuous TRIM, for better SSD performance and longevity</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/frugalify/commit/d3f44a40d654adebad81ce1e7562dc484cb08360" target="_blank">Lightweight logging daemons</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2676/files" target="_blank">Support for automatic updates</a></li>
   <li>And much more!</li>
 </ul>
 
