fix broken instructions in dpup release notes

--- a/woof-code/support/release_extras/vanilladpup.htm
+++ b/woof-code/support/release_extras/vanilladpup.htm
@@ -98,5 +98,6 @@ If left unused, apt poses no risk to a Vanilla Dpup installation.
 
 <p>To use the "slight" hinting style, which is often the default in other distributions or desktop environments, run the following commands in the terminal:</p>
 
-<code>rm /usr/share/fontconfig/conf.avail/10-hinting-none.conf</code>
-<code>ln -s /usr/share/fontconfig/conf.avail/10-hinting-slight.conf /usr/share/fontconfig/conf.avail/</code>
+<code>rm -f /etc/fonts/conf.d/10-hinting-none.conf</code>
+<code>ln -s /usr/share/fontconfig/conf.avail/10-hinting-slight.conf /etc/fonts/conf.d/</code>
+<code>ln -s /usr/share/fontconfig/conf.avail/10-autohint.conf /etc/fonts/conf.d/</code>
