update dpup release notes

--- a/woof-code/support/release_extras/vanilladpup.htm
+++ b/woof-code/support/release_extras/vanilladpup.htm
@@ -38,6 +38,9 @@
   <li><a href="https://github.com/puppylinux-woof-CE/frugalify/commit/d3f44a40d654adebad81ce1e7562dc484cb08360" target="_blank">Lightweight logging daemons</a></li>
   <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2676/files" target="_blank">Support for automatic updates</a></li>
   <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2779/files" target="_blank">Support for the APT package manager</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2778" target="_blank">Automatic menu reload on package installation, removal or change</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2846" target="_blank">Support for automatically configuring problematic applications to run as spot</a></li>
+  <li><a href="https://github.com/puppylinux-woof-CE/woof-CE/pull/2868" target="_blank">DKMS support, for easy installation and update of non-free drivers</a></li>
   <li>And much more!</li>
 </ul>
 
