run lxtask on Ctrl+Shift+Esc

--- a/woof-code/support/release_extras/vanilladpup.htm
+++ b/woof-code/support/release_extras/vanilladpup.htm
@@ -65,6 +65,7 @@
   <li><kbd>Super</kbd>+<kbd>r</kbd> runs a command</li>
   <li><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>t</kbd> starts a new terminal</li>
   <li><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Delete</kbd> starts the task manager</li>
+  <li><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Esc</kbd> starts the task manager</li>
   <li><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Right</kbd> switches to the next desktop</li>
   <li><kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Left</kbd> switches to the previous desktop</li>
 </ul>
